2001-12-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* glade/glade-gnome.c (app_build_children):
	* libgnomeui/gnome-messagebox.c: removed unused variable

	* libgnomeui/gnome-ui-init.c: #include gtkaccelmap.h to avoid
	warnings

2001-12-08  Murray Cumming  <murrayc@usa.net>

	* libgnomeui/gnome-font-picker.h: font_set default signal
	handler's char* arg corrected to  const char*.

2001-12-08  Glynn Foster  <glynn.foster@sun.com>

	* libgnomeui/Makefile.am: Build fix.

2001-12-07  jacob berkman  <jacob@ximian.com>

	* Makefile.am:
	* configure.in: add tests/

	* glade/glade-gnome.c: implement a lot of missing things and fix
	what was in there (but broken)

	* tests/: test libglade support

2001-12-04  Murray Cumming  <murrayc@usa.net>

	* libgnomeui/gnome-about.h/.c: Added gnome_about_construct(), for
	  language bindings.

2001-11-30  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up version to 1.107.0

2001-11-28  jacob berkman  <jacob@ximian.com>

	* configure.in: install the .schemas into $DESTDIR

Tue Nov 27 17:48:02 2001  Owen Taylor  <otaylor@redhat.com>

	* configure.in (GCONF_CONFIG_SOURCE): Add config tests
	for GConf.

2001-11-26  Gediminas Paulauskas <menesis@delfi.lt>

	* *Makefile.am: remove -I*intl/ and -DVERSION from INCLUDES

2001-11-22  Abel Cheung  <maddog@linux.org.hk>

	* configure.in: LIBGNOMEUI_CFLAGS and LIBGNOMEUI_GLADE_CFLAGS needs
	  gnome-vfs-module-2.0 include path.

2001-11-08  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Upped version and Released 1.106.0

2001-11-07  jacob berkman  <jacob@ximian.com>

	* glade/Makefile.am (glademoduledir): just install into our prefix
	rather than libglade's

	* configure.in: remove check for glade module dir

2001-10-29  jacob berkman  <jacob@ximian.com>

	* configure.in: drop the 2 from the package name, and set
	GETTEXT_PACKAGE

	* acconfig.h: add GETTEXT_PACKAGE

2001-10-24  jacob berkman  <jacob@ximian.com>

	* glade/glade-gnome.c: (file_entry_find_internal_child): fix a
	tyop
	