@@ -223,17 +223,19 @@ gnome_dialog_construct (GnomeDialog * dialog,
   if (title)
     gtk_window_set_title (GTK_WINDOW (dialog), title);
   
-  while (TRUE) {
+  if (ap) {
+    while (TRUE) {
+      
+      button_name = va_arg (ap, gchar *);
+      
+      if (button_name == NULL) {
+	break;
+      }
     
-    button_name = va_arg (ap, gchar *);
-    
-    if (button_name == NULL) {
-      break;
-    }
-    
-    gnome_dialog_append_button( dialog, 
-				button_name);
-  };  
+      gnome_dialog_append_button( dialog, 
+				  button_name);
+    };
+  }
 
   /* argument list may be null if the user wants to do weird things to the
    * dialog, but we need to make sure this is initialized */
