@@ -1,3 +1,8 @@
+2001-12-09  Kristian Rietveld  <kris@gtk.org>
+
+	* libgnomeui/gnome-dialog.c (gnome_dialog_construct): don't append
+	buttons when ap == NULL
+
 2001-12-08  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* glade/glade-gnome.c (app_build_children):
